Move ui files to data/resources/ui
No need to pollute src/ with *.ui files. This is how Gnome authenticator
seems to structure stuff.

Signed-off-by: Ayush Singh <ayushsingh1325@gmail.com>

--- a/data/meson.build
+++ b/data/meson.build
@@ -1,3 +1,14 @@
+gnome = import('gnome')
+pkgdatadir = join_paths(get_option('prefix'), get_option('datadir'), meson.project_name())
+
+resources = gnome.compile_resources(
+  meson.project_name(),
+  'resources.gresource.xml',
+  gresource_bundle: true,
+  install: true,
+  install_dir: pkgdatadir,
+)
+
 desktop_file = i18n.merge_file(
         input: 'org.gnome.weebtk.desktop.in',
        output: 'org.gnome.weebtk.desktop',
