--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 gettext-rs = { version = "0.7", features = ["gettext-system"] }
 gtk = { version = "0.5", package = "gtk4" }
+once_cell = "1.16.0"
 
 [dependencies.adw]
 package = "libadwaita"
